[tool.poetry]
name = "grid-world-q-learning-agent"
version = "0.1.0"
description = ""
authors = ["Javier Vela <javier.vela00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.5"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
